--- a/geomelody/geomelody/SongCell.xib
+++ b/geomelody/geomelody/SongCell.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1536</int>
-		<string key="IBDocument.SystemVersion">12E55</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2843</string>
-		<string key="IBDocument.AppKitVersion">1187.39</string>
-		<string key="IBDocument.HIToolboxVersion">626.00</string>
+		<int key="IBDocument.SystemTarget">1552</int>
+		<string key="IBDocument.SystemVersion">12C60</string>
+		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
+		<string key="IBDocument.AppKitVersion">1187.34</string>
+		<string key="IBDocument.HIToolboxVersion">625.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1929</string>
+			<string key="NS.object.0">2083</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
@@ -43,10 +43,10 @@
 							<object class="IBUIImageView" id="580246965">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrameSize">{320, 100}</string>
+								<string key="NSFrameSize">{320, 159}</string>
 								<reference key="NSSuperview" ref="735591696"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="518002529"/>
+								<reference key="NSNextKeyView" ref="353441230"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -55,10 +55,57 @@
 									<string key="NSResourceName">songcell_background.png</string>
 								</object>
 							</object>
+							<object class="IBUILabel" id="211447129">
+								<reference key="NSNextResponder" ref="735591696"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{258, 107}, {39, 19}}</string>
+								<reference key="NSSuperview" ref="735591696"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="737727301"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">Likes</string>
+								<object class="NSColor" key="IBUITextColor" id="366667436">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MQA</bytes>
+								</object>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUITextAlignment">2</int>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="231749328">
+									<int key="type">1</int>
+									<double key="pointSize">12</double>
+								</object>
+								<object class="NSFont" key="IBUIFont" id="101797574">
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">12</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+							</object>
+							<object class="IBUIImageView" id="353441230">
+								<reference key="NSNextResponder" ref="735591696"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{299, 111}, {12, 12}}</string>
+								<reference key="NSSuperview" ref="735591696"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="518002529"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">play32.png</string>
+								</object>
+							</object>
 							<object class="IBUILabel" id="737727301">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{6, 73}, {314, 21}}</string>
+								<string key="NSFrame">{{6, 138}, {294, 21}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="567944333"/>
@@ -69,10 +116,7 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">Title</string>
-								<object class="NSColor" key="IBUITextColor" id="366667436">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MQA</bytes>
-								</object>
+								<reference key="IBUITextColor" ref="366667436"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
@@ -89,10 +133,10 @@
 							<object class="IBUILabel" id="518002529">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{6, 58}, {201, 21}}</string>
+								<string key="NSFrame">{{6, 123}, {201, 21}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="737727301"/>
+								<reference key="NSNextKeyView" ref="211447129"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -114,25 +158,10 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUIImageView" id="631132510">
-								<reference key="NSNextResponder" ref="735591696"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{299, 62}, {12, 12}}</string>
-								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="928199358"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">heart32.png</string>
-								</object>
-							</object>
 							<object class="IBUILabel" id="567944333">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{258, 58}, {39, 20}}</string>
+								<string key="NSFrame">{{258, 123}, {39, 20}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1067743792"/>
@@ -147,36 +176,29 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">2</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="231749328">
-									<int key="type">1</int>
-									<double key="pointSize">12</double>
-								</object>
-								<object class="NSFont" key="IBUIFont" id="699130417">
-									<string key="NSName">Helvetica</string>
-									<double key="NSSize">12</double>
-									<int key="NSfFlags">16</int>
-								</object>
+								<reference key="IBUIFontDescription" ref="231749328"/>
+								<reference key="IBUIFont" ref="101797574"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
-							<object class="IBUIImageView" id="928199358">
+							<object class="IBUIImageView" id="631132510">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{299, 78}, {12, 12}}</string>
+								<string key="NSFrame">{{299, 123}, {12, 16}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="928199358"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">retweet32.png</string>
+									<string key="NSResourceName">heart32.png</string>
 								</object>
 							</object>
 							<object class="IBUILabel" id="1067743792">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{258, 73}, {39, 21}}</string>
+								<string key="NSFrame">{{258, 138}, {39, 21}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="631132510"/>
@@ -192,11 +214,25 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">2</int>
 								<reference key="IBUIFontDescription" ref="231749328"/>
-								<reference key="IBUIFont" ref="699130417"/>
+								<reference key="IBUIFont" ref="101797574"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
+							<object class="IBUIImageView" id="928199358">
+								<reference key="NSNextResponder" ref="735591696"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{299, 147}, {12, 8}}</string>
+								<reference key="NSSuperview" ref="735591696"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">retweet32.png</string>
+								</object>
+							</object>
 						</array>
-						<string key="NSFrameSize">{320, 99}</string>
+						<string key="NSFrameSize">{320, 159}</string>
 						<reference key="NSSuperview" ref="1040207467"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="580246965"/>
@@ -212,7 +248,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 100}</string>
+				<string key="NSFrameSize">{320, 160}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="735591696"/>
@@ -221,7 +257,7 @@
 				<int key="IBUISelectionStyle">0</int>
 				<reference key="IBUIContentView" ref="735591696"/>
 				<string key="IBUIReuseIdentifier">SongCellId</string>
-				<integer value="100" key="IBUIRowHeight"/>
+				<real value="147" key="IBUIRowHeight"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -266,6 +302,14 @@
 					</object>
 					<int key="connectionID">155</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">plays</string>
+						<reference key="source" ref="1040207467"/>
+						<reference key="destination" ref="211447129"/>
+					</object>
+					<int key="connectionID">159</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -293,10 +337,12 @@
 							<reference ref="580246965"/>
 							<reference ref="737727301"/>
 							<reference ref="518002529"/>
-							<reference ref="567944333"/>
 							<reference ref="631132510"/>
+							<reference ref="567944333"/>
 							<reference ref="928199358"/>
 							<reference ref="1067743792"/>
+							<reference ref="211447129"/>
+							<reference ref="353441230"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -335,6 +381,17 @@
 						<reference key="object" ref="1067743792"/>
 						<reference key="parent" ref="1040207467"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">157</int>
+						<reference key="object" ref="211447129"/>
+						<reference key="parent" ref="1040207467"/>
+						<string key="objectName">Label - Playes</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">158</int>
+						<reference key="object" ref="353441230"/>
+						<reference key="parent" ref="1040207467"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -348,6 +405,8 @@
 				<string key="148.CustomClassName">SongCell</string>
 				<string key="148.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="157.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="158.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="34.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="79.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -355,7 +414,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">155</int>
+			<int key="maxID">159</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -364,6 +423,7 @@
 					<string key="superclassName">UITableViewCell</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="likes">UILabel</string>
+						<string key="plays">UILabel</string>
 						<string key="shares">UILabel</string>
 						<string key="songImage">UIImageView</string>
 						<string key="songInterpreter">UILabel</string>
@@ -372,6 +432,10 @@
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="likes">
 							<string key="name">likes</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="plays">
+							<string key="name">plays</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="shares">
@@ -404,9 +468,10 @@
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="heart32.png">{32, 32}</string>
+			<string key="play32.png">{32, 32}</string>
 			<string key="retweet32.png">{32, 32}</string>
 			<string key="songcell_background.png">{320, 100}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1929</string>
+		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
 </archive>
