--- a/geomelody/geomelody/SongCell.xib
+++ b/geomelody/geomelody/SongCell.xib
@@ -45,8 +45,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{320, 159}</string>
 								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="353441230"/>
+								<reference key="NSNextKeyView" ref="128807489"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -55,12 +54,11 @@
 									<string key="NSResourceName">songcell_background.png</string>
 								</object>
 							</object>
-							<object class="IBUILabel" id="211447129">
+							<object class="IBUILabel" id="755313303">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{258, 107}, {39, 19}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="737727301"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -80,19 +78,18 @@
 									<int key="type">1</int>
 									<double key="pointSize">12</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="101797574">
+								<object class="NSFont" key="IBUIFont" id="983565257">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">12</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
-							<object class="IBUIImageView" id="353441230">
+							<object class="IBUIImageView" id="128807489">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{299, 111}, {12, 12}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="518002529"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -107,7 +104,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{6, 138}, {294, 21}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="567944333"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -135,8 +131,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{6, 123}, {201, 21}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="211447129"/>
+								<reference key="NSNextKeyView" ref="755313303"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -163,7 +158,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{258, 123}, {39, 20}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1067743792"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -177,7 +171,7 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">2</int>
 								<reference key="IBUIFontDescription" ref="231749328"/>
-								<reference key="IBUIFont" ref="101797574"/>
+								<reference key="IBUIFont" ref="983565257"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUIImageView" id="631132510">
@@ -185,7 +179,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{299, 123}, {12, 16}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="928199358"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -200,7 +193,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{258, 138}, {39, 21}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="631132510"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -214,7 +206,7 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">2</int>
 								<reference key="IBUIFontDescription" ref="231749328"/>
-								<reference key="IBUIFont" ref="101797574"/>
+								<reference key="IBUIFont" ref="983565257"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUIImageView" id="928199358">
@@ -222,7 +214,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{299, 147}, {12, 8}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -234,7 +225,6 @@
 						</array>
 						<string key="NSFrameSize">{320, 159}</string>
 						<reference key="NSSuperview" ref="1040207467"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="580246965"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -250,7 +240,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 160}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="735591696"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -306,7 +295,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">plays</string>
 						<reference key="source" ref="1040207467"/>
-						<reference key="destination" ref="211447129"/>
+						<reference key="destination" ref="755313303"/>
 					</object>
 					<int key="connectionID">159</int>
 				</object>
@@ -341,8 +330,8 @@
 							<reference ref="567944333"/>
 							<reference ref="928199358"/>
 							<reference ref="1067743792"/>
-							<reference ref="211447129"/>
-							<reference ref="353441230"/>
+							<reference ref="755313303"/>
+							<reference ref="128807489"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -383,13 +372,13 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">157</int>
-						<reference key="object" ref="211447129"/>
+						<reference key="object" ref="755313303"/>
 						<reference key="parent" ref="1040207467"/>
 						<string key="objectName">Label - Playes</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">158</int>
-						<reference key="object" ref="353441230"/>
+						<reference key="object" ref="128807489"/>
 						<reference key="parent" ref="1040207467"/>
 					</object>
 				</array>
@@ -416,52 +405,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">159</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">SongCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="likes">UILabel</string>
-						<string key="plays">UILabel</string>
-						<string key="shares">UILabel</string>
-						<string key="songImage">UIImageView</string>
-						<string key="songInterpreter">UILabel</string>
-						<string key="songTitle">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="likes">
-							<string key="name">likes</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="plays">
-							<string key="name">plays</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="shares">
-							<string key="name">shares</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="songImage">
-							<string key="name">songImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="songInterpreter">
-							<string key="name">songInterpreter</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="songTitle">
-							<string key="name">songTitle</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/SongCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
